wordpress/mysql-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-test
  namespace: test
spec:
  selector:
    app: mysql-test
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
