wordpress/wp-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-service-test
  namespace: test
spec:
  selector:
    app: wordpress-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
