wordpress/wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-service
  namespace: production
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
