wordpress/wp-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: test.akifbatur.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-service-test
            port:
              number: 80
